--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+  
+<head>
+<title>Take that L green booooooooooooy</title>
+</head>
 <body>
-
-<h1>Take that L</h1>
 
 <video width="320" height="240" controls autoplay>
   <source src="video.mp4" type="video/mp4">
