--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+
 <html>
   
 <head>
-<title>Take that L green booooooooooooy</title>
+  <title>Take that L green booooooooooooy</title>
+  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101291987);</script>
+  <script async src="//static.getclicky.com/js"></script>
 </head>
 <body>
 
@@ -11,5 +14,6 @@
   Your browser does not support the video tag.
 </video>
 
+  
 </body>
 </html>
