--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   
 <head>
   <title>Take that L green booooooooooooy</title>
-  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101291987);</script>
-  <script async src="//static.getclicky.com/js"></script>
 </head>
 <body>
 
@@ -14,6 +12,8 @@
   Your browser does not support the video tag.
 </video>
 
-  
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101291987);</script>
+<script async src="//static.getclicky.com/js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101291987ns.gif" /></p></noscript>
 </body>
 </html>
