--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   
 <head>
-  <title>Take that L green booooooooooooy</title>
+  <title>hi</title>
 </head>
 <body>
 
@@ -11,9 +11,5 @@
   <source src="video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-
-<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101291987);</script>
-<script async src="//static.getclicky.com/js"></script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101291987ns.gif" /></p></noscript>
 </body>
 </html>
