--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <source src="video.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-  <h1>Aeter's youtube trailer</h1>
-  <h2>YT CHANNEL: https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w</h2>
+  <p>Aeter's youtube trailer</p>
+  <p>YT CHANNEL: https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w</p>
 </body>
 </html>
