--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   Your browser does not support the video tag.
 </video>
   <p>Aeter's youtube trailer</p>
-  <p>YT CHANNEL: https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w</p>
+  <a href="https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w">yt channel :)</a>
 </body>
 </html>
