--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <html>
   
 <head>
-  <meta http-equiv="refresh" content="0; url=http://example.com/" />
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
   <title>hi</title>
 </head>
 <body>
 
-<video width="320" height="240" controls autoplay>
-  <source src="video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-  <p>Aeter's youtube trailer</p>
+  <p>im sorry. heres my yt anyways.</p>
   <a href="https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w">yt channel :)</a>
 </body>
 </html>
