--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-  
+
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
-  <title>hi</title>
+  <!--
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />0
+  -->
+  <title>POLL</title>
 </head>
 <body>
 
-  <p>im sorry. heres my yt anyways.</p>
-  <a href="https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w">yt channel :)</a>
+  <p>Poll: (site updated 3/15/21)</p>
+  <p>will you play everhood?</p>
+  <a href="https://store.steampowered.com/app/1229380/Everhood/">yes!!!!!!!</a>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">no :(</a>
+  <a href="https://www.youtube.com/channel/UCfTsXh56YFJ9HLSouhus96w">youtube channel</a>
 </body>
 </html>
