--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <html>
 
 <head>
-  <!--
   <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />0
-  -->
-  <title>POLL</title>
+  <title>pee pee</title>
 </head>
 <body>
 
