--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />0
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ"/>
   <title>pee pee</title>
 </head>
 <body>
