final update to index.html
for the foreseeable future

--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
 
 <head>
   <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ"/>
-  <title>pee pee</title>
+  <title>oh no</title>
 </head>
 <body>
 
-  <p>Poll: (site updated 3/15/21)</p>
-  <p>will you play everhood?</p>
-  <a href="https://store.steampowered.com/app/1229380/Everhood/">yes!!!!!!!</a>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">no :(</a>
-  <a href="https://www.youtube.com/channel/UCYCEGDoj6dB1B3uB-mCtCuA">youtube channel</a>
+  <p>(site updated 3/31/22)</p>
+  <p>my final update: im sorry for whats about to happen lol</p>
+  
 </body>
 </html>
